reset frontend and complete POST APIS
